// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ServerElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ServerElement given bindings field of type ServerBindingsElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ServerBindingsElement)))
`;

exports[`refractor elements ServerElement given variables field values contain ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements ServerElement should refract to semantic ApiDOM tree 1`] = `
(ServerElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (ServerVariableElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecurityRequirementElement)))
  (MemberElement
    (StringElement)
    (TagsElement
      (TagElement))))
`;
